k8s/manifests-9f5889/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-9f5889
  namespace: journee
  labels:
    app: journee-9f5889
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-9f5889
  template:
    metadata:
      labels:
        app: journee-9f5889
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-9f5889
          image: gcr.io/my-docker-471807/journee:9f5889-e51504
          ports:
            - containerPort: 3000
