k8s/manifests-9f5889/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-9f5889
  namespace: journee
spec:
  selector:
    app: journee-9f5889
  ports:
    - port: 80
      targetPort: 3000
